    fixes a bug whereby accessing MAMCR would crash the ARM emulation.

  * Added 'thumb.trapfatal' commandline argument, which causes the
    Thumb ARM emulation to either trap on a fatal error (throw an
    exception to the debugger and exit emulation) or simply log the
    error and continue.  This should normally always be enabled, but
    can be disabled by developers for testing reasons.

  * The debugger 'print' command now indicates "special" addresses if they
    are read-only (R), write-only (W) or read-write (R/W).

  * Fixed a bug in scrolling the mouse-wheel in certain debugger UI items
    would cause the program to crash; scrolling now works as expected.

  * Fixed compile issues in the latest versions of Ubuntu and Debian, and
    fixed UNIX desktop file so that Stella will launch with a ROM when
    selected from its icon.  Thanks go to Stephen Kitt for this code.

  * Updated include PNG library to latest stable version.

-Have fun!


3.4 to 3.4.1: (June 11, 2011)

  * Re-enabled 'grabmouse' commandline argument and associated
    functionality with the following changes:
      - it is changed in the "Input Settings' UI, not in 'Video Settings'
      - it only has meaning while in emulation mode
      - it is enabled by default

  * Fixed bug with emulation of paddles using the mouse most evident in
    Warlords; movement was being filtered out if the mouse was moved too
    fast.  There's still more work required in this area, however.

  * Fixed bug with analog axes on gamepad devices, whereby jittering in
    these axes would override input from digital axis, hat or keyboard
    input.

  * Fixed bug when switching to the debugger and back again would
    sometimes cause an extra mouse motion event (which would cause the
    emulation to think the mouse was moved and move the player
    accordingly).

  * Tweaked bankswitch autodetection code for 4A50 bankswitching; several
    more test ROMs are automatically detected.
